--- a/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
@@ -27,6 +27,8 @@ hardcorealchemy.humanity.warn2.variant1=You fantasize a life without thought or 
 hardcorealchemy.humanity.warn3.variant1=You panic as you realize you don't remember who you are.
 hardcorealchemy.humanity.lost=You feel your humanity fade away.
 
+hardcorealchemy.morph.suffocation_risk=There is not enough space to morph here.
+
 hardcorealchemy.morph.disabled.noability=You fail to comprehend other forms.
 hardcorealchemy.morph.disabled.nohumanity=Your humanity is gone. Your mind is confined to this body.
 hardcorealchemy.morph.disabled.marriage=Your humanity is strengthened by the power of love. You cannot find it in you to become a beast.
