Display warning message when a player drinks dirty water and it can cause nutrition loss

--- a/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
@@ -55,6 +55,7 @@ hardcorealchemy.magic.disabled.projectekeypress=Your inhuman form prevents you f
 
 hardcorealchemy.magic.recall_thaumcraft=Memories from a past life come flooding back to you.
 
+hardcorealchemy.diet.dirty_water_warning=You fear tainted water will be harmful for your nutritional health
 hardcorealchemy.diet.display.omnivore.upper=Omnivore
 hardcorealchemy.diet.display.carnivore.upper=Carnivore
 hardcorealchemy.diet.display.vegan.upper=Vegan
