Mention new Alchemic Ash guide in the Hardcore Alchemy guide

--- a/src/main/resources/assets/hardcorealchemy_modpack_guide/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy_modpack_guide/lang/en_US.lang
@@ -102,7 +102,7 @@ hardcorealchemy.guide.exploring_the_arcane.projecte.1=One cannot forget to menti
 
 ## Exploring the Arcane: Vital Alchemy
 hardcorealchemy.guide.exploring_the_arcane.alchemic_ash.title=Vital Alchemy
-hardcorealchemy.guide.exploring_the_arcane.alchemic_ash.1=Vital alchemy [Alchemic Ash] is also worth mentioning. It may lack the glamorous danger of blood alchemy or the precision of equivalent exchange, but its powders have no shortage of uses both practical and aesthetic. With a few hoppers or item pipes, many of its resources can be automated rather simply. Budding vital alchemists are encouraged to explore the following guide: [Search "Alchemic Ash" on minecraftforum.net. Please note a few crafting recipes have been added/removed]
+hardcorealchemy.guide.exploring_the_arcane.alchemic_ash.1=Vital alchemy [Alchemic Ash] is also worth mentioning. It may lack the glamorous danger of blood alchemy or the precision of equivalent exchange, but its powders have no shortage of uses both practical and aesthetic. With a few hoppers or item pipes, many of its resources can be automated rather simply. Budding vital alchemists are encouraged to consult "Vital Alchemy," a guide crafted simply with two pieces of sand.
 
 ## Exploring the Arcane: Herbal Bestiary
 hardcorealchemy.guide.exploring_the_arcane.unique_crops.title=Herbal Bestiary
