Add potion of Air Breathing

--- a/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
@@ -90,3 +90,8 @@ potion.effect.hardcorealchemy:allow_magic=Potion of Unhindered Magic
 splash_potion.effect.hardcorealchemy:allow_magic=Splash Potion of Unhindered Magic
 lingering_potion.effect.hardcorealchemy:allow_magic=Lingering Potion of Unhindered Magic
 tipped_arrow.effect.hardcorealchemy:allow_magic=Arrow of Unhindered Magic
+potion.hardcorealchemy:air_breathing=Air Breathing
+potion.effect.hardcorealchemy:air_breathing=Potion of Air Breathing
+splash_potion.effect.hardcorealchemy:air_breathing=Splash Potion of Air Breathing
+lingering_potion.effect.hardcorealchemy:air_breathing=Lingering Potion of Air Breathing
+tipped_arrow.effect.hardcorealchemy:air_breathing=Arrow of Air Breathing
