--- a/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
@@ -39,6 +39,14 @@ hardcorealchemy.ability.fishing.beginhunt=You begin the hunt.
 hardcorealchemy.ability.fishing.endhunt=You end the hunt.
 hardcorealchemy.ability.fishing.error.notinwater=You must be in water to begin the hunt.
 
+hardcorealchemy.ability.sustenance.not_available.grass=There is no grass to eat here.
+hardcorealchemy.ability.sustenance.not_available.drink=There is nothing to drink here.
+hardcorealchemy.ability.sustenance.not_available.grass_drink=There is no grass or water here.
+hardcorealchemy.ability.sustenance.not_ready.grass=You are not desperate enough to eat this grass.
+hardcorealchemy.ability.sustenance.not_ready.drink=You are not desperate enough to drink this water.
+hardcorealchemy.ability.sustenance.disabled=Your instincts are not strong enough to find sustenance.
+hardcorealchemy.ability.sustenance.invalid=Invalid sustenance message. Please report to mod developer.
+
 hardcorealchemy.instinct.attack_prey.need=You yearn to hunt %s.
 hardcorealchemy.instinct.attack_prey.detect=You sense a %s.
 hardcorealchemy.instinct.attack_prey.gone=You no longer sense prey.
