--- a/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
@@ -56,9 +56,11 @@ hardcorealchemy.instinct.attack_prey.preserve_own_kind=You refuse to hunt your o
 hardcorealchemy.instinct.attack_prey.something_else=You want badly to kill %s instead.
 hardcorealchemy.instinct.attack_prey.finished=The hunting urges start to fade.
 
-hardcorealchemy.instinct.home.generic.fulfilled=You yearn to be somewhere else.
-hardcorealchemy.instinct.home.generic.need=You feel at home here.
+hardcorealchemy.instinct.home.generic.need=You yearn to be somewhere else.
+hardcorealchemy.instinct.home.generic.need_nearby=You yearn to return to your home.
+hardcorealchemy.instinct.home.generic.fulfilled=You feel at home here.
 hardcorealchemy.instinct.home.nature.need=You yearn for your natural habitat.
+hardcorealchemy.instinct.home.nature.need_nearby=You restlessly yearn to return to nature.
 hardcorealchemy.instinct.home.nature.fulfilled=This natural environment makes you feel at ease.
 
 hardcorealchemy.instinct.effect.hunted.warn.variant1=What was that sound?
