Fix wrong bale name in Alchemic Ash guide section title

--- a/src/main/resources/assets/alchemicash_guide/lang/en_US.lang
+++ b/src/main/resources/assets/alchemicash_guide/lang/en_US.lang
@@ -92,7 +92,7 @@ alchemicash.guide.ash.blazing_bale.1=The cinder bale can be sifted by a factor o
 alchemicash.guide.ash.blazing_bale.2=Emerald: From Alchemic Ash\nLapis Ore: From Slimeball\nSoulsand: From Mushroom Stew\nEnder Pearl: From Clay Ball\nIron Ingot: From Redstone Dust\nGold Ingot: From Glowstone Dust\nBlaze Dust: From Coal
 
 ## Ashen Conversion: Inferno Bale
-alchemicash.guide.ash.inferno_bale.title=Blazing Bale
+alchemicash.guide.ash.inferno_bale.title=Inferno Bale
 alchemicash.guide.ash.inferno_bale.1=Finally, the blazing bale can be sifted by a factor of 9 once more to create the venerable inferno bale, whose alchemical products are as follows:
 alchemicash.guide.ash.inferno_bale.2=Diamond: From Alchemic Ash\nGhast Tear: From Slimeball\nNetherwart: From Mushroom Stew\nIron Block: From Redstone Dust\nGold Block: From Glowstone Dust\nBlaze Rod: From Coal
 
