Add dimensional flux effect when switching dimensions or touching nether portal

--- a/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
+++ b/src/main/resources/assets/hardcorealchemy/lang/en_US.lang
@@ -134,3 +134,5 @@ splash_potion.effect.hardcorealchemy:water_resistance=Splash Potion of Water Res
 lingering_potion.effect.hardcorealchemy:water_resistance=Lingering Potion of Water Resistance
 tipped_arrow.effect.hardcorealchemy:water_resistance=Arrow of Water Resistance
 
+potion.hardcorealchemy:dimensional_flux=Dimensional Flux
+
